5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4469/executions/1838_1279.log
== TEST (2019-06-19 13:45:24) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
   # Move personagem para DIREITA
   elif x == 'D':
      xtab = xtab + 1
   # Move personagem para CIMA
   elif x == 'W':
		ytab = ytab + 1
   # Move personagem para BAIXO
   elif x == 'S':
      ytab = ytab - 1

   # Trata evento
   # Moeda
   if tabuleiro[ytab,xtab] == 11:
   	moeda += 1
      # Apaga moeda do tabuleiro
      tabuleiro[ytab,xtab] = 0
   # Zumbi
   elif tabuleiro[ytab,xtab] == 22:
   	life -= 1

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
File "XXXX", line 28
    elif x == 'D':
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 13:46:39) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
   # Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
   # Move personagem para CIMA
	elif x == 'W':
		ytab = ytab + 1
   # Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab - 1

   # Trata evento
   # Moeda
	if tabuleiro[ytab,xtab] == 11:
   	moeda += 1
      # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
   # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
   	life -= 1

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
File "XXXX", line 40
    moeda += 1
             ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 13:47:03) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
   # Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
   # Move personagem para CIMA
	elif x == 'W':
		ytab = ytab + 1
   # Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab - 1

   # Trata evento
   # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda += 1
      # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
   # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life -= 1

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 13:51:43) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
   # Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
   # Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
   # Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1

   # Trata evento
   # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda += 1
      # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
   # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life -= 1

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-19 13:52:59) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
   # Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
   # Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
   # Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1

   # Trata evento
   # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda += 1
      # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
   # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life -= 1

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- EXECUTION TIME:
1.02422
-- TEST CASE 1:
---- input:
[[0,11,0,11,0,11,22,0,11,0,11,0,11],[11,0,22,11,0,11,11,0,11,0,0,0,22],[11,22,22,11,0,11,11,0,22,0,11,11,22],[22,11,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,11,0,0,11,0,22,0,0,22,11],[0,11,0,11,0,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDSDSAAWW
---- correct output:
posicao x:  3
posicao y:  0
moedas:  6
life:  100

---- user output:
posicao x:  3
posicao y:  0
moedas:  6
life:  100
-- TEST CASE 2:
---- input:
[[22,11,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,11,0,0,11,0,22,0,0,22,11],[0,11,0,11,0,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DSSSDSAASD
---- correct output:
posicao x:  1
posicao y:  5
moedas:  7
life:  95
---- user output:
posicao x:  1
posicao y:  5
moedas:  7
life:  99
-- TEST CASE 3:
---- input:
[[22,22,11,11,11,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,0,11,0,11,22,0,11,0,11,0,11],[11,0,22,11,0,11,11,0,11,0,0,0,22],[11,22,22,11,0,11,11,0,22,0,11,11,22],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDSSSAWDWAS
---- correct output:
posicao x:  2
posicao y:  2
moedas:  5
life:  80
---- user output:
posicao x:  2
posicao y:  2
moedas:  5
life:  96
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 13:54:17) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
   # Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
   # Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
   # Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1

   # Trata evento
   # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda += 1
      # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
   # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life -= 1

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-19 13:54:21) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
   # Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
   # Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
   # Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1

   # Trata evento
   # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda += 1
      # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
   # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life -= 1

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- EXECUTION TIME:
0.908391
-- TEST CASE 1:
---- input:
[[0,11,0,11,0,11,22,0,11,0,11,0,11],[11,0,22,11,0,11,11,0,11,0,0,0,22],[11,22,22,11,0,11,11,0,22,0,11,11,22],[22,11,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,11,0,0,11,0,22,0,0,22,11],[0,11,0,11,0,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDSDSAAWW
---- correct output:
posicao x:  3
posicao y:  0
moedas:  6
life:  100

---- user output:
posicao x:  3
posicao y:  0
moedas:  6
life:  100
-- TEST CASE 2:
---- input:
[[22,11,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,11,0,0,11,0,22,0,0,22,11],[0,11,0,11,0,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DSSSDSAASD
---- correct output:
posicao x:  1
posicao y:  5
moedas:  7
life:  95
---- user output:
posicao x:  1
posicao y:  5
moedas:  7
life:  99
-- TEST CASE 3:
---- input:
[[22,22,11,11,11,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,0,11,0,11,22,0,11,0,11,0,11],[11,0,22,11,0,11,11,0,11,0,0,0,22],[11,22,22,11,0,11,11,0,22,0,11,11,22],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDSSSAWDWAS
---- correct output:
posicao x:  2
posicao y:  2
moedas:  5
life:  80
---- user output:
posicao x:  2
posicao y:  2
moedas:  5
life:  96
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-19 13:55:45) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
   # Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
   # Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
   # Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1

   # Trata evento
   # Moeda
	if tabuleiro[xtab,ytab] == 11:
		moeda += 1
      # Apaga moeda do tabuleiro
		tabuleiro[xtab,ytab] = 0
   # Zumbi
	elif tabuleiro[xtab,ytab] == 22:
		life -= 1

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- EXECUTION TIME:
1.04431
-- TEST CASE 1:
---- input:
[[0,11,0,11,0,11,22,0,11,0,11,0,11],[11,0,22,11,0,11,11,0,11,0,0,0,22],[11,22,22,11,0,11,11,0,22,0,11,11,22],[22,11,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,11,0,0,11,0,22,0,0,22,11],[0,11,0,11,0,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDSDSAAWW
---- correct output:
posicao x:  3
posicao y:  0
moedas:  6
life:  100

---- user output:
posicao x:  3
posicao y:  0
moedas:  6
life:  96
-- TEST CASE 2:
---- input:
[[22,11,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,11,0,0,11,0,22,0,0,22,11],[0,11,0,11,0,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DSSSDSAASD
---- correct output:
posicao x:  1
posicao y:  5
moedas:  7
life:  95
---- user output:
posicao x:  1
posicao y:  5
moedas:  6
life:  99
-- TEST CASE 3:
---- input:
[[22,22,11,11,11,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,0,11,0,11,22,0,11,0,11,0,11],[11,0,22,11,0,11,11,0,11,0,0,0,22],[11,22,22,11,0,11,11,0,22,0,11,11,22],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDSSSAWDWAS
---- correct output:
posicao x:  2
posicao y:  2
moedas:  5
life:  80
---- user output:
posicao x:  2
posicao y:  2
moedas:  5
life:  98
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-19 14:00:40) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
   # Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
   # Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
   # Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1

   # Trata evento
   # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda += 1
      # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
   # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life -= 1

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-19 14:00:49) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
   # Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
   # Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
   # Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1

   # Trata evento
   # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda += 1
      # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
   # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life -= 1

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- EXECUTION TIME:
1.45978
-- TEST CASE 1:
---- input:
[[0,11,0,11,0,11,22,0,11,0,11,0,11],[11,0,22,11,0,11,11,0,11,0,0,0,22],[11,22,22,11,0,11,11,0,22,0,11,11,22],[22,11,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,11,0,0,11,0,22,0,0,22,11],[0,11,0,11,0,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDSDSAAWW
---- correct output:
posicao x:  3
posicao y:  0
moedas:  6
life:  100

---- user output:
posicao x:  3
posicao y:  0
moedas:  6
life:  100
-- TEST CASE 2:
---- input:
[[22,11,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,11,0,0,11,0,22,0,0,22,11],[0,11,0,11,0,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DSSSDSAASD
---- correct output:
posicao x:  1
posicao y:  5
moedas:  7
life:  95
---- user output:
posicao x:  1
posicao y:  5
moedas:  7
life:  99
-- TEST CASE 3:
---- input:
[[22,22,11,11,11,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,0,11,0,11,22,0,11,0,11,0,11],[11,0,22,11,0,11,11,0,11,0,0,0,22],[11,22,22,11,0,11,11,0,22,0,11,11,22],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDSSSAWDWAS
---- correct output:
posicao x:  2
posicao y:  2
moedas:  5
life:  80
---- user output:
posicao x:  2
posicao y:  2
moedas:  5
life:  96
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-19 14:04:00) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
xtab = 0
ytab = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Analise da jogada
for x in mov:
	# Move personagem para ESQUERDA
	if x == 'A':
		xtab = xtab - 1
   # Move personagem para DIREITA
	elif x == 'D':
		xtab = xtab + 1
   # Move personagem para CIMA
	elif x == 'W':
		ytab = ytab - 1
   # Move personagem para BAIXO
	elif x == 'S':
		ytab = ytab + 1

   # Trata evento
   # Moeda
	if tabuleiro[ytab,xtab] == 11:
		moeda += 1
      # Apaga moeda do tabuleiro
		tabuleiro[ytab,xtab] = 0
   # Zumbi
	elif tabuleiro[ytab,xtab] == 22:
		life -= 5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)
-- EXECUTION TIME:
0.919972
-- TEST CASE 1:
---- input:
[[0,11,0,11,0,11,22,0,11,0,11,0,11],[11,0,22,11,0,11,11,0,11,0,0,0,22],[11,22,22,11,0,11,11,0,22,0,11,11,22],[22,11,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,11,0,0,11,0,22,0,0,22,11],[0,11,0,11,0,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDSDSAAWW
---- correct output:
posicao x:  3
posicao y:  0
moedas:  6
life:  100

---- user output:
posicao x:  3
posicao y:  0
moedas:  6
life:  100
-- TEST CASE 2:
---- input:
[[22,11,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,11,0,0,11,0,22,0,0,22,11],[0,11,0,11,0,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DSSSDSAASD
---- correct output:
posicao x:  1
posicao y:  5
moedas:  7
life:  95
---- user output:
posicao x:  1
posicao y:  5
moedas:  7
life:  95
-- TEST CASE 3:
---- input:
[[22,22,11,11,11,11,22,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,11,0,0,11,11],[11,11,22,11,0,0,11,0,22,0,22,0,11],[0,11,0,11,0,11,22,0,11,0,11,0,11],[11,0,22,11,0,11,11,0,11,0,0,0,22],[11,22,22,11,0,11,11,0,22,0,11,11,22],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDSSSAWDWAS
---- correct output:
posicao x:  2
posicao y:  2
moedas:  5
life:  80
---- user output:
posicao x:  2
posicao y:  2
moedas:  5
life:  80
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
